# Idea-agent-codex

./: .gitignore  PRD.md  README.md  Revised Architecture.md  SESSION_REPORT.md  Technical Architecture.md  UX  UI Концепция.md  agent prompt.md  build_exe.bat  create_desktop_shortcut.bat  create_desktop_shortcut.ps1  idea.md  prompt.md  start.bat  start_app.bat  three project.md
ailab/: .gitignore  DEVELOPER_GUIDE.md  README.md  config.yaml  pyproject.toml  requirements.txt
ailab/backend/: app.py  logger.py  settings.py
ailab/backend/agents/: cluster_agent.py  collector_agent.py  extractor_agent.py  idea_generator_agent.py  idea_scoring_agent.py  report_agent.py  runner_agent.py
ailab/backend/ai/: __init__.py  embeddings.py  llm_client.py  prompt_templates.py  secret_cipher.py
ailab/backend/api/: routes_dashboard.py  routes_ideas.py  routes_jobs.py  routes_opportunities.py  routes_projects.py  routes_search.py  routes_settings.py  routes_sources.py
ailab/backend/controllers/: analysis_controller.py  dashboard_controller.py  idea_controller.py  (+2 more)
ailab/frontend/: index.html  package-lock.json  package.json
ailab/idea_reports/: sample_idea.md  автоматический-исследователь-пользовательских-болей.md  библиотека-промптов-для-команд.md  трекер-боли-для-саппорт-команд.md
ailab/launcher/: desktop_window.py  detect_ai_cli.py  launcher.py  open_browser.py  start_server.py
ailab/scripts/: build_exe.py  install_env.bat  install_env.sh  run_dev_server.py
ailab/templates/: idea_report_template.md  project_readme_template.md  starter_prompt_template.md
(+92 files in other folders)
